--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     <div class="container">
       <section id="main_content">
         <h3>Presidential Canidate</h3>
-<img src="images/1.jpg" alt="1"/>
-<img src="images/2.jpg" alt="2"/>
-<img src="images/6.jpg" alt="6"/>
-<img src="images/7.jpg" alt="7"/>
-<img src="images/8.jpg" alt="8"/>
+<img src="images/1.jpg" alt="1">
+<img src="images/2.jpg" alt="2">
+<img src="images/6.jpg" alt="6">
+<img src="images/7.jpg" alt="7">
+<img src="images/8.jpg" alt="8">
 <This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
