--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section id="main_content">
         <h3>Presidential Canidate</h3>
 <img src="images/1.jpg" alt="1">
-<img src="images/2.jpg" alt="2">
+<img src="images/2.png" alt="2">
 <img src="images/6.gif" alt="6">
 <img src="images/7.jpg" alt="7">
 <img src="images/8.jpg" alt="8">
