--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Ronald G.Taylor</h1>
-        <h2>Running for the president of the United States</h2>
+        <h2>Running for the President of the United States</h2>
 
         <section id="downloads">
           <a href="https://github.com/RonaldTaylor4/Project/zipball/master" class="btn">Download as .zip</a>
@@ -34,7 +34,7 @@
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-<img src="images/2.png" alt="2">
+<img src="images/20.jpg" alt="20">
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
 
