--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <section id="main_content">
         <h3>Presidential Canidate</h3>
 <img src="images/1.jpg" alt="1">
-<This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
+<p>Hello my name is Ronald G. Taylor and I am running for the President of the United States. I see many great things in our society today but I see a need for improvement to like with our education and the need to unify our country by raising taxes for different income levels. I know what you are saying more taxes but the extra tax money that we take will help the homeless the needy and the disabled.
+</p>
 <h3>Education</h3
 <img src="images/20.jpg" alt="20">
 <p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
