--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p>Hello my name is Ronald G. Taylor and I am running for the President of the United States. I see many great things in our society today but I see a need for improvement to like with our education and the need to unify our country by raising taxes for different income levels. I know what you are saying more taxes but the extra tax money that we take will help the homeless the needy and the disabled.
 </p>
 
-<h3>Education</h3
+<h3>Education</h3>
 <img src="images/20.jpg" alt="20">
 <p></p>I feel that we should educate our children because if we do we can create a new and extremely brilliant society that is filled with innovators self sufficient people because did you know that 85% of crimes that are committed in the United States are committed by dropouts and non educated people. To think we could wipe out 85% of crime in america if we just educate our young people. 
 
