--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
 <h3>Unity</h3>
 <img src="images/6.gif" alt="6">
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Unity that is what I hope America will be some day. I want a country where we are self sufficient from other so we can help them with hard times like financial depressions and food droughts. I think this would be a good thing to do because if we can agree with each other surely we can agree with other countries and wipe out war and genesi around the world and we can grow together as earth instead apart you know saying 2 minds are better than one.
+</p>
 
 <h3>Role Model</h3>
 <img src="images/7.jpg" alt="7">
