--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@ John W. Rodgers, should be named Person of the Year because he has received awar
 
 <h3>Vote me Ronald G. Taylor for Presedent of the United States</h3>
 <img src="images/21.jpg" alt="21">
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+<p>Here is a sample of how I want our earth to be.</p>
+
+  <iframe width="640" height="360" src="https://www.youtube.com/embed/G55BqsYBDBI" frameborder="0" allowfullscreen></iframe>    </section>
     </div>
 
     
