--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
       <div class="container">
         <h1>Ronald G.Taylor</h1>
-        <h2>Ru
+        <h2>Running for the President of the United States</h2>
         <section id="downloads">
           <a href="https://github.com/RonaldTaylor4/Project/zipball/master" class="btn">Download as .zip</a>
           <a href="https://github.com/RonaldTaylor4/Project/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/RonaldTaylorancial help can get  help. He also gives to the Homeless Foundation of Chicago. He gives to the Homeless Foundation because  he wants to help the people out of the troubles they are in. 
-John W. Rodgers, should be named Person of the Year because he has received awards, he is the trustee of the University of Chicago, he leads his own foundation to help the homeless and the kids of Chicago, which makes him worthy of being person of the year. John also earned Princeton's highest Award. He helped decide the budget of the University of Chicago. Without a doubt, that's why he should be Person of the Year. 
+          <a href="https://github.com/RonaldTaylor4/Project" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+<p>Hello my name is Ronald G. Taylor and I am running for the President of the United States. I see many great things in our society today but I see a need for improvement to like with our education and the need to unify our country by raising taxes for different income levels. I know what you are saying more taxes but the extra tax money that we take will help the homeless the needy and the disabled.     
 </p>
 
 <h3>Vote me Ronald G. Taylor for Presedent of the United States</h3>
