--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="downloads">
           <a href="https://github.com/RonaldTaylor4/Project/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/RonaldTaylor4/Project/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="index1.html"></a> class="btn">Basketball</a>
           <a href="https://github.com/RonaldTaylor4/Project" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
