--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="downloads">
           <a href="" class="btn">Download as .zip</a>
-          <a href="iframe width="640" height="360" src="https://www.youtube.com/embed/G55BqsYBDBI" frameborder="0" allowfullscreen></iframe>index1.html" class="btn">Basketball</a>
+          < src="https://www.youtube.com/embed/G55BqsYBDBI" frameborder="0" allowfullscreen></iframe>" class="btn">Basketball</a>
           <a href="https://github.com/RonaldTaylor4/Project" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
       </div>
